[package]
name = "wgtun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.64"
clap = { version = "3.2.20", features = ["derive"] }
env_logger = "0.10.0"
futures = "0.3.24"
tokio = { version = "1.28.2", features = ["full"] }
log = "0.4.18"
