[package]
name = "wgtun"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
env_logger = "0.10.0"
futures = "0.3.28"
tokio = { version = "1.35.1", features = ["full"] }
log = "0.4.19"
