[package]
name = "wgtun"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.3", features = ["derive"] }
env_logger = "0.10.0"
futures = "0.3.28"
tokio = { version = "1.36.0", features = ["full"] }
log = "0.4.19"
